--- a/Resources/DesktopModules/ResourceManager/App_LocalResources/resourcemanager.nl-NL.resx
+++ b/Resources/DesktopModules/ResourceManager/App_LocalResources/resourcemanager.nl-NL.resx
@@ -45,18 +45,6 @@
   <data name="Database.Text" xml:space="preserve" lastModified="2021-09-01 12:44:13">
     <value>Database</value>
   </data>
-  <data name="DeleteFileDialogHeader.Text" xml:space="preserve" lastModified="2021-09-01 12:44:13">
-    <value>Bevestig verwijderen</value>
-  </data>
-  <data name="DeleteFileDialogMessage.Text" xml:space="preserve" lastModified="2021-09-01 12:52:27">
-    <value>Weet je zeker dat het bestand verwijderd kan worden?</value>
-  </data>
-  <data name="DeleteFolderDialogHeader.Text" xml:space="preserve" lastModified="2021-09-01 13:14:56">
-    <value>Bevestig verwijderen</value>
-  </data>
-  <data name="DeleteFolderDialogMessage.Text" xml:space="preserve" lastModified="2021-09-01 12:52:27">
-    <value>Weet je zeker dat de map verwijderd kan worden?</value>
-  </data>
   <data name="Description.Text" xml:space="preserve" lastModified="2021-09-01 12:52:27">
     <value>Beschrijving</value>
   </data>
@@ -128,9 +116,6 @@
   </data>
   <data name="ManageFolderTypes.Text" xml:space="preserve" lastModified="2021-09-01 12:57:25">
     <value>Beheer maptypes</value>
-  </data>
-  <data name="MoveItem.Text" xml:space="preserve" lastModified="2021-09-01 12:57:25">
-    <value>Verplaats item</value>
   </data>
   <data name="Name.Text" xml:space="preserve" lastModified="2021-09-01 12:57:25">
     <value>Naam</value>
@@ -212,5 +197,146 @@
   </data>
   <data name="UserHasNoPermissionToReadFileProperties.Error" xml:space="preserve" lastModified="2021-09-01 12:59:10">
     <value>De gebruiker heeft geen rechten om de bestandseigenschappen te zien</value>
+  </data>
+  <data name="CollapseFolders.Text">
+    <value>Mappen samenvouwen</value>
+  </data>
+  <data name="ConfirmDeleteMessage.Text">
+  <value>Weet je zeker dat je de geselecteerde items wilt verwijderen?</value>
+  </data>
+  <data name="ConfirmMoveMessage.Text">
+    <value>Weet je zeker dat je de geselecteerde items wilt verplaatsen?</value>
+  </data>
+  <data name="ConfirmUnlinkMessage.Text">
+    <value>Weet je zeker dat je de volgende mappen wilt ontkoppelen?</value>
+  </data>
+  <data name="CopyUrl.Text">
+    <value>Kopieer URL</value>
+  </data>
+  <data name="Delete.Text">
+    <value>Verwijderen</value>
+  </data>
+  <data name="DeleteItems.Text">
+    <value>Verwijder items</value>
+  </data>
+  <data name="DeletingItems.Text">
+    <value>Items worden verwijderd</value>
+  </data>
+  <data name="Download.Text">
+    <value>Downloaden</value>
+  </data>
+  <data name="Edit.Text">
+    <value>Bewerken</value>
+  </data>
+  <data name="EditFolderMappings.Text">
+    <value>Mapkoppelingen bewerken</value>
+  </data>
+  <data name="ExpandFolders.Text">
+    <value>Mappen uitvouwen</value>
+  </data>
+  <data name="ExtractUploads.Text">
+  <value>Geüploade ZIP-bestanden uitpakken</value>
+  </data>
+  <data name="FileId.Text">
+    <value>Bestands-ID</value>
+  </data>
+  <data name="Files.Text">
+    <value>Bestanden</value>
+  </data>
+  <data name="FolderId.Text">
+    <value>Map-ID</value>
+  </data>
+  <data name="Folders.Text">
+    <value>Mappen</value>
+  </data>
+  <data name="General.Text">
+    <value>Algemeen</value>
+  </data>
+  <data name="GlobalAssets.Text">
+    <value>Globale bestanden</value>
+  </data>
+  <data name="GroupAssets.Text">
+    <value>{0} bestanden</value>
+  </data>
+  <data name="Items.Text">
+    <value>Bestanden</value>
+  </data>
+  <data name="MappedPath.Text">
+    <value>Gekoppeld pad</value>
+  </data>
+  <data name="Move.Text">
+  <value>Verplaatsen</value>
+  </data>
+  <data name="MoveItems.Text">
+    <value>Verplaats item(s)</value>
+  </data>
+  <data name="MovingItems.Text">
+    <value>Items worden verplaatst</value>
+  </data>
+  <data name="No.Text">
+    <value>Nee</value>
+  </data>
+  <data name="OpenFile.Text">
+    <value>Openen</value>
+  </data>
+  <data name="Overwrite.Text">
+  <value>Overschrijven</value>
+  </data>
+  <data name="Permissions.Text">
+  <value>Rechten</value>
+  </data>
+  <data name="RolePermissions.Text">
+    <value>Rolrechten</value>
+  </data>
+  <data name="SelectDestinationFolder.Text">
+    <value>Selecteer de doelmap.</value>
+  </data>
+  <data name="SiteAssets.Text">
+    <value>Site-bestanden</value>
+  </data>
+  <data name="Sort.Text">
+    <value>Sorteren</value>
+  </data>
+  <data name="SortField_CreatedOnDate.Text">
+    <value>Gemaakt op</value>
+  </data>
+  <data name="SortField_ItemName.Text">
+    <value>Naam</value>
+  </data>
+  <data name="SortField_LastModifiedOnDate.Text">
+    <value>Laatste wijziging</value>
+  </data>
+  <data name="SortField_ParentFolder.Text">
+    <value>Bovenliggende map</value>
+  </data>
+  <data name="SortField_Size.Text">
+    <value>Grootte</value>
+  </data>
+  <data name="StatusBarMessage.Text">
+    <value>Toont {0} van {1} bestanden</value>
+  </data>
+  <data name="Sync.Text">
+  <value>Synchroniseren</value>
+  </data>
+  <data name="Unlink.Text">
+    <value>Ontkoppelen</value>
+  </data>
+  <data name="UnlinkFolders.Text">
+    <value>Koppel map(pen) los</value>
+  </data>
+  <data name="UnlinkingFolders.Text">
+    <value>Mappen worden ontkoppeld</value>
+  </data>
+  <data name="Upload.Text">
+    <value>Uploaden</value>
+  </data>
+  <data name="UserAssets.Text">
+  <value>{0} bestanden</value>
+  </data>
+  <data name="UserPermissions.Text">
+    <value>Gebruikersrechten</value>
+  </data>
+  <data name="Yes.Text">
+    <value>Yes</value>
   </data>
 </root>
